fix: contrast color light mode

--- a/client/src/assets/css/base.css
+++ b/client/src/assets/css/base.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
 
 :root {
-  --vt-c-white: #f7f7f7;
+  --vt-c-white: #eff4ff;
   --vt-c-white-soft: #ffffff;
   --vt-c-white-mute: #f2f2f2;
   --vt-c-white-soft-hover: #F1FAFF;
